--- a/src/scss/includes/_app.scss
+++ b/src/scss/includes/_app.scss
@@ -28,9 +28,13 @@
     box-shadow: $box-shadow-base;
 }
 
-.opactiy-box {
-    background-color: $light-black;
-    opacity: 0.7;
+.text-box {
+    background-color: #fa8c16;
+    color: $white;
+
+    h1 h2 h3 h4 h5 span p li {
+        filter: brightness(1.8);
+    }
 }
 
 .centered-absolute-child {
