--- a/src/scss/includes/_variables.scss
+++ b/src/scss/includes/_variables.scss
@@ -3,33 +3,28 @@
 
 /* Color palette */
 $white: #fff;
-$light-black: #333;
 $black: #111;
 $grey-base: #9e9e9e;
-$light-red: #ffdce0;
 
 /* inspired by ant design: https://ant.design/docs/react/introduce */
 $primary-color: #fa541c; // primary color for all components
 $secondary-color: #ffbb96;
 $hover-primary-color: #ff7a45;
 $link-color: #1890ff; // link color
+$info-color: #1890ff; // info state color
 $success-color: #52c41a; // success state color
 $warning-color: #faad14; // warning state color
 $error-color: #f5222d; // error state color
-$info-color: #1890ff; // info state color
-$heading-color: rgba(0, 0, 0, 0.85); // heading text color
 $text-color: rgba(0, 0, 0, 0.65); // major text color
-$text-color-secondary : rgba(0, 0, 0, .45); // secondary text color
-$disabled-color : rgba(0, 0, 0, .25); // disable state color
 $border-radius-base: 4px; // major border radius
 $border-color-base: #d9d9d9; // major border color
 $box-shadow-base: 0 2px 8px rgba(0, 0, 0, 0.15); // major shadow for layers
 
-$background-color: #ff9c6e;
+$background-color: $secondary-color;
 $success-background-color: $success-color;
 $error-background-color: $error-color;
 $warning-background-color: $warning-color;
-$info-background-color: $link-color;
+$info-background-color: $info-color;
 
 
 
