other version boxgrid

--- a/src/scss/includes/_boxgrid.scss
+++ b/src/scss/includes/_boxgrid.scss
@@ -24,7 +24,7 @@
 
                 span {
                     @extend .text-box;
-                    color: $white;
+                    background-color: $primary-color;
                 }
 
                 &-label {
