--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -16,4 +16,5 @@
 @import './includes/_password.scss';
 @import './includes/_cooking.scss';
 @import './includes/_recipe.scss';
+@import './includes/_subscribe.scss';
 @import './includes/_about.scss';
