--- a/src/scss/includes/_subscribe.scss
+++ b/src/scss/includes/_subscribe.scss
@@ -7,8 +7,11 @@
         flex-direction: column;
         align-items: center;
         text-align: center;
-        margin-top: 10%;
-        width: 80%;
+        width: 95%;
+
+        p {
+            width: 50%;
+        }
     }
 
     &-button {
