redesinging recipe page, fixing paypal sub

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -3,6 +3,7 @@
 @import './includes/_app.scss';
 @import './includes/_button.scss';
 @import './includes/_modal.scss';
+@import './includes/_carousel.scss';
 @import './includes/_navbar.scss';
 @import './includes/_preferences.scss';
 @import './includes/message.scss';
