--- a/src/scss/includes/_carousel.scss
+++ b/src/scss/includes/_carousel.scss
@@ -1,13 +1,25 @@
 .carousel {
     width: 100%;
+    position: relative;
     display: flex;
     flex-direction: row;
+    justify-content: center;
     align-items: center;
+    overflow: hidden;
 
-    &-items {
-        width: 80%;
+    ul {
+        width: 100%;
         display: flex;
-        flex-direction: column;
-        overflow-x: scroll;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+
+        li {
+            display: none;
+            list-style: none;
+            &.carousel-current-item {
+                display: block;
+            }
+        }
     }
 }
