--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -2,6 +2,7 @@
 @import './includes/_index.scss';
 @import './includes/_app.scss';
 @import './includes/_button.scss';
+@import './includes/_loader.scss';
 @import './includes/_modal.scss';
 @import './includes/_carousel.scss';
 @import './includes/_navbar.scss';
