Adding first css styles to the statistics page

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -17,3 +17,4 @@
 @import './includes/_cooking.scss';
 @import './includes/_recipe.scss';
 @import './includes/_about.scss';
+@import './includes/_statistics.scss';
