--- a/src/scss/includes/_app.scss
+++ b/src/scss/includes/_app.scss
@@ -29,7 +29,7 @@
 }
 
 .text-box {
-    background-color: #fa8c16;
+    background-color: $primary-color;
     color: $white;
 
     h1 h2 h3 h4 h5 span p li {
