--- a/src/scss/includes/_button.scss
+++ b/src/scss/includes/_button.scss
@@ -11,7 +11,7 @@
     padding: 0 15px;
     font-size: $font-size-s;
     border-radius: $border-radius-base;
-    color: $text-color;
+    color: $font-color;
     background-color: $white;
     border-color: $border-color-base;
 
