--- a/src/scss/includes/_variables.scss
+++ b/src/scss/includes/_variables.scss
@@ -5,22 +5,23 @@
 $white: #fff;
 $black: #111;
 $grey-base: #9e9e9e;
+$platinum: #E5E4E2;
+$samurai-yellow: #FFFF00;
 
 /* inspired by ant design: https://ant.design/docs/react/introduce */
-$primary-color: #fa541c; // primary color for all components
-$secondary-color: #ffbb96;
-$hover-primary-color: #ff7a45;
+$primary-color: #BA121F; // primary color for all components
+$secondary-color: #c7343b;
+$hover-primary-color: #d4595b;
+$background-color: $platinum;
 $link-color: #1890ff; // link color
 $info-color: #1890ff; // info state color
 $success-color: #52c41a; // success state color
 $warning-color: #faad14; // warning state color
 $error-color: #f5222d; // error state color
-$text-color: rgba(0, 0, 0, 0.65); // major text color
 $border-radius-base: 4px; // major border radius
 $border-color-base: #d9d9d9; // major border color
 $box-shadow-base: 0 2px 8px rgba(0, 0, 0, 0.15); // major shadow for layers
 
-$background-color: $secondary-color;
 $success-background-color: $success-color;
 $error-background-color: $error-color;
 $warning-background-color: $warning-color;
@@ -36,9 +37,7 @@ $error-font-color: $white;
 $success-font-color: $font-color;
 $warning-font-color: $font-color;
 $info-font-color: $font-color;
-// $font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'PingFang SC', 'Hiragino Sans GB',
-//   'Microsoft YaHei', 'Helvetica Neue', Helvetica, Arial, sans-serif, 'Apple Color Emoji',
-//   'Segoe UI Emoji', 'Segoe UI Symbol';
+
 $font-family: Rubik,Lato,"Lucida Grande","Lucida Sans Unicode",Tahoma,Sans-Serif;
 
 $font-size-xs: 13px;
@@ -73,7 +72,7 @@ $pc-width: 1281px;
 $input-height: 3rem;
 $input-border-color: $grey-base;
 $input-border: 1px solid $input-border-color;
-$input-background: #fff;
+$input-background: $platinum;
 $input-error-color: $error-background-color;
 $input-success-color: $success-background-color;
 $input-focus-color: $secondary-color;
