--- a/src/scss/includes/_variables.scss
+++ b/src/scss/includes/_variables.scss
@@ -6,7 +6,7 @@ $white: #fff;
 $black: #111;
 $grey-base: #9e9e9e;
 $platinum: #E5E4E2;
-$samurai-yellow: #FFFF00;
+$samurai-yellow: #fdf497;
 
 /* inspired by ant design: https://ant.design/docs/react/introduce */
 $primary-color: #BA121F; // primary color for all components
