refactored preferences menu, new lower level menu called preferences in navmenu

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -6,7 +6,7 @@
 @import './includes/_modal.scss';
 @import './includes/_carousel.scss';
 @import './includes/_navbar.scss';
-@import './includes/_preferences.scss';
+@import './includes/_navmenu.scss';
 @import './includes/message.scss';
 @import './includes/_login.scss';
 @import './includes/_tags.scss';
