--- a/src/scss/includes/_app.scss
+++ b/src/scss/includes/_app.scss
@@ -13,6 +13,7 @@
     min-height: calc(100vh - 250px);
     max-width: 1280px;
     margin: auto;
+    overflow-x: hidden;
 }
 
 .center {
@@ -59,6 +60,7 @@
     flex-direction: column;
     align-items: center;
     margin-bottom: 15%;
+    overflow-x: hidden;
     @media screen and (max-width: $phone-width) {
         margin-bottom: 25%;
     }
