--- a/src/scss/includes/_app.scss
+++ b/src/scss/includes/_app.scss
@@ -1,40 +1,15 @@
-.button-center {
-    display: block;
-    margin: auto;
-  }
-
-.text-center {
-    display: block;
-    text-align: center;
-}
-
-.container {
-    min-height: 100%;
-    min-height: calc(100vh - 250px);
-    max-width: 1280px;
-    margin: auto;
+.page {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 15%;
     overflow-x: hidden;
-}
 
-.center {
-    margin: auto;
-    width: 50%;
-    text-align: center;
-}
-
-.box {
-    background-color: $white;
-    border-radius: $border-radius-base;
-    border: 1px solid $border-color-base;
-    box-shadow: $box-shadow-base;
-}
-
-.text-box {
-    background-color: $primary-color;
-    color: $white;
-
-    h1 h2 h3 h4 h5 span p li {
-        filter: brightness(1.3);
+    @media screen and (max-width: $phone-width) {
+        margin-bottom: 25%;
     }
 }
 
@@ -53,28 +28,55 @@
     margin: auto;
 }
 
-.page {
-    width: 100%;
-    height: 100%;
+.container {
+    min-height: 100%;
+    min-height: calc(100vh - 250px);
+    max-width: 1280px;
+    margin: auto;
+}
+
+.center {
+    margin: auto;
+    width: 50%;
+    text-align: center;
+}
+
+.box {
+    background-color: $white;
+    border-radius: $border-radius-base;
+    border: 1px solid $border-color-base;
+    box-shadow: $box-shadow-base;
+}
+
+.card {
+    @extend .box;
+    text-align: center;
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-bottom: 15%;
-    overflow-x: hidden;
-    @media screen and (max-width: $phone-width) {
-        margin-bottom: 25%;
+    justify-content: center;
+    padding: 20px;
+}
+
+
+.text-box {
+    background-color: $primary-color;
+    color: $white;
+
+    h1 h2 h3 h4 h5 span p li {
+        filter: brightness(1.3);
     }
 }
 
 .not-displayed {
-   display: none !important;
+    display: none !important;
 }
 
 .not-displayed-on-mobile {
     @media screen and (max-width: $phone-width) {
         display: none !important;
     }
- }
+}
 
 .aria-element {
     &:focus {
@@ -87,6 +89,7 @@
 .clickable {
     @extend .aria-element;
     touch-action: manipulation;
+
     &:hover {
         cursor: pointer;
     }
