--- a/src/scss/includes/_app.scss
+++ b/src/scss/includes/_app.scss
@@ -33,6 +33,10 @@
     min-height: calc(100vh - 250px);
     max-width: 1280px;
     margin: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .center {
