--- a/src/scss/includes/_home.scss
+++ b/src/scss/includes/_home.scss
@@ -1,5 +1,7 @@
 .home-container {
-    @extend .page;
+    width: 100%;
+    height: 100%;
+
 
     .recipes-container {
         @extend .box;
@@ -30,10 +32,4 @@
             }
         }
     }
-}
-
-.funky {
-    font-size: $font-size-xl + 5px;
-    color: $samurai-yellow;
-    transform: rotate(20deg);
 }
