--- a/src/scss/includes/_app.scss
+++ b/src/scss/includes/_app.scss
@@ -29,6 +29,8 @@
 }
 
 .container {
+    width: 100%;
+    height: 100%;
     min-height: 100%;
     min-height: calc(100vh - 250px);
     max-width: 1280px;
