--- a/src/scss/includes/_statistics.scss
+++ b/src/scss/includes/_statistics.scss
@@ -1,68 +1,67 @@
-.statistics-header{
-    text-align: center;
-}
+.statistics-container {
+    display: block;
+    .statistics-calculated-block{
+        margin: 0 auto;
+        text-align: center;
 
-.statistics-calculated-block{
-    margin: 0 auto;
-    text-align: center;
-
-    h2 {
-        text-align: right;
-        font-size: $font-size-l;
-        display: inline-block;
-        @media screen and (max-width: $phone-width){
-            font-size: $font-size-m;
+        h2 {
+            text-align: right;
+            font-size: $font-size-l;
+            display: inline-block;
+            @media screen and (max-width: $phone-width){
+                font-size: $font-size-m;
+            }
         }
-    }
 
-    span {
-        font-size: $font-size-xxl;
-        font-weight: $font-weight-bold;
-        @media screen and (max-width: $phone-width){
-            font-size: $font-size-xl;
-            margin-left: 10px;
-        }
-    }
-}
-
-.statistics-block{
-    @extend .box;
-    width: 32.5%;
-    display: inline-block;
-    margin: 0.4%;
-
-    @media screen and (max-width: $phone-width) {
-        width: 100%;
-    }
-
-    h2 {
-        font-size: $font-size-l;
-    }
-
-    div {
-        width: 100%;
-
-        svg {
-            width: 100%;
-
-            g {
-                display: inline-block;
+        span {
+            font-size: $font-size-xxl;
+            font-weight: $font-weight-bold;
+            @media screen and (max-width: $phone-width){
+                font-size: $font-size-xl;
+                margin-left: 10px;
             }
         }
     }
 
-    span {
-        display: block;
-        padding-bottom: 20px;
-        font-size: $font-size-l;
-        text-align: center;
-    }
+    .statistics-block{
+        @extend .box;
+        width: 32.5%;
+        display: inline-block;
+        margin: 0.4%;
 
-    .statistics-green{
-        color: $success-color;
-    }
+        @media screen and (max-width: $phone-width) {
+            width: 100%;
+        }
 
-    .statistics-red{
-        color: $error-color;
+        h2 {
+            font-size: $font-size-l;
+        }
+
+        div {
+            width: 100%;
+
+            svg {
+                width: 100%;
+
+                g {
+                    display: inline-block;
+                }
+            }
+        }
+
+        span {
+            display: block;
+            padding-bottom: 20px;
+            font-size: $font-size-l;
+            text-align: center;
+        }
+
+        .statistics-green{
+            color: $success-color;
+        }
+
+        .statistics-red{
+            color: $error-color;
+        }
     }
 }
