fixing font mess I did

--- a/src/scss/includes/_index.scss
+++ b/src/scss/includes/_index.scss
@@ -57,7 +57,7 @@ h2 {
 
 h3 {
   @extend h2;
-  font-family: "Battle Angel";
+  font-family: "Permanent Marker", cursive;
   font-size: 42px;
   font-weight: $font-weight-bold;
   @media screen and (max-width: $phone-width) {
