disabling current locale button as already picked

--- a/src/scss/includes/_navmenu.scss
+++ b/src/scss/includes/_navmenu.scss
@@ -50,6 +50,13 @@
             }
         }
 
+        .current {
+            pointer-events: none;
+            cursor: default;
+            text-decoration: none;
+            background-color: $background-color;
+        }
+
         a {
             @extend .aria-element;
             div {
