--- a/src/scss/includes/_tags.scss
+++ b/src/scss/includes/_tags.scss
@@ -6,13 +6,12 @@
 .tag {
     @extend .btn;
     @extend .btn-primary;
-    
+
     display: inline-flex;
     align-items: baseline;
     font-size: $font-size-s;
     margin: 5px;
-    padding-left: 3px;
-    padding-right: 3px;
+    padding: 5px 3px;
     border-radius: 6px;
     @media screen and (max-width: $phone-width) {
         margin: 2px;
